--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,17 @@
   margin: 40px auto;
   padding: 20px;
 }
+
+/* cards */
+.card-preview {
+  margin: 30px 0; 
+  padding: 20px;
+  border-bottom: 1px solid white;
+}
+.card-preview:hover{
+  box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+}
+
+.card-preview h2 {
+  color: blue;
+}
