--- a/src/index.css
+++ b/src/index.css
@@ -4,19 +4,24 @@
 * {
   margin: 0;
   font-family: "Quicksand";
-  color: #333;
+}
+
+:root {
+  --red: #f1356d;
 }
  
 .navbar {
   padding: 20px;
   display: flex;
   align-items: center;
-  max-width: 600px;
-  margin: 0 auto;
   border-bottom: 1px solid #f2f2f2;
 }
+.App > * {
+  max-width: 600px;
+  margin: 0 auto;
+}
 .navbar h1 {
-  color: #f1356d;
+  color: var(--red);
 }
 .navbar .links {
   margin-left: auto;
@@ -27,7 +32,7 @@
   padding: 6px;
 }
 .navbar a:hover {
-  color: #f1356d;
+  color: var(--red);
 }
 .content {
   max-width: 600px;
@@ -35,16 +40,70 @@
   padding: 20px;
 }
 
-/* cards */
-.card-preview {
-  margin: 30px 0; 
+.App {
+  font-family: Arial, sans-serif;
+  text-align: center;
   padding: 20px;
-  border-bottom: 1px solid white;
 }
-.card-preview:hover{
-  box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+.folder-preview-cont {
+  width: 90%;
+  max-width: 500px;
+  margin: 10px auto;
 }
 
-.card-preview h2 {
-  color: blue;
+.folder-preview {
+  border: 2px solid black;
+  border-radius: 7px;
+  margin: 10px;
+  padding: 3px;
+}
+.folder-preview:hover {
+  cursor: pointer;
+  border: 1px solid var(--red);
+  color: var(--red);
+}
+
+.folder-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.flashcard {
+  border: 2px solid lightgray;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.toggle-answer-button {
+  margin-top: 10px;
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  background-color: var(--red);
+  color: white;
+  cursor: pointer;
+}
+
+.flashcard-form {
+  width: 70%;
+  margin: 10px auto;
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+  align-items: center;
+}
+.flashcard-form textarea {
+  height: 50px;
+  width: 400px;
+  padding: 5px;
+  border: 1px solid gray;
+  border-radius: 5px;
+  resize: none;
+}
+
+.flashcard-form button {
+  width: 200px;
 }
