added user model, migrated to vite, and used tailwindcss

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,178 +1,22 @@
+@import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
+
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
-/* base styles */
-* {
-  margin: 0;
-  font-family: "Quicksand";
-}
+@theme {
+  --font-quicksand: 'Quicksand', sans-serif;
 
-:root {
-  --red: #f1356d;
-}
+  --color-bg: oklch(98.5% 0.002 247.839); /* white */
+  --color-text: oklch(27.8% 0.033 256.848); /* black */
+  --color-placeholder: oklch(70.7% 0.022 261.325);  /* gray */
+  --color-primary: oklch(57.7% 0.245 27.325); /* red */
+  --color-secondary: oklch(39.3% 0.095 152.535); /* green */
+  --color-section: oklch(96.7% 0.003 264.542); /* light gray */
 
-img {
-  height: 20px;
-  width: 20px;
-}
-button {
-  height: 25px;
-  border-radius: 5px;
-  border: 1px gray solid;
-  cursor: pointer;
-}
- 
-.navbar {
-  padding: 20px;
-  display: flex;
-  align-items: center;
-  border-bottom: 1px solid #f2f2f2;
-}
-.App > * {
-  max-width: 1000px;
-  margin: 0 auto;
-}
-.navbar h1 {
-  color: var(--red);
-}
-.navbar .links {
-  margin-left: auto;
-}
-.navbar a {
-  margin-left: 16px;
-  text-decoration: none;
-  padding: 6px;
-}
-.navbar a:hover {
-  color: var(--red);
-}
-.content {
-  max-width: 1000px;
-  margin: 40px auto;
-  padding: 20px;
-}
-
-.App {
-  font-family: Arial, sans-serif;
-  text-align: center;
-  padding: 20px;
-}
-.Home {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.create-folder-form {
-  display: flex;
-  flex-direction: column;
-  width: 350px;
-  gap: 6px;
-  align-items: center;
-  margin: 0px auto;
-}
-.create-folder-form > input {
-  width: 100%;
-  height: 20px;
-}
-.create-folder-form > button{
-  width: 200px;
-}
-
-.viewfolder-name {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px
-}
-.viewfolder-name > img {
-  cursor: pointer;
-}
-
-.edit-folder, #editFolderForm {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-.edit-folder-form-buttons {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-}
-
-.folder-preview-cont {
-  width: 90%;
-  max-width: 500px;
-  margin: 10px auto;
-}
-
-.folder-preview {
-  border: 2px solid black;
-  border-radius: 7px;
-  max-width: 500px;
-  margin: 10px;
-  padding: 3px;
-}
-.folder-preview:hover {
-  cursor: pointer;
-  border: 1px solid var(--red);
-  color: var(--red);
-}
-
-.folder-buttons {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  margin-bottom: 10px;
-}
-
-.flashcard {
-  border: 2px solid lightgray;
-  width: 500px;
-  margin: 10px auto;
-  padding: 30px;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  align-items: center;
-}
-.flashcard-form-group {
-  display: flex;
-  gap: 10px;
-}
-.flashcard-form {
-  width: 70%;
-  margin: 10px auto;
-  display: flex;
-  flex-direction: column;
-  gap: 2px;
-  align-items: center;
-}
-.edit-folder textarea {
-  height: 50px;
-  width: 400px;
-  padding: 5px;
-  border: 1px solid gray;
-  border-radius: 5px;
-  resize: none;
-}
-
-.flashcard-form > button, .flashcard > button {
-  width: 200px;
-}
-
-.toggle-answer-button {
-  margin-top: 10px;
-  padding: 5px;
-  border: none;
-  border-radius: 5px;
-  background-color: var(--red);
-  color: white;
-  cursor: pointer;
-}
-
-.about-div {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+  --color-bg-dark: oklch(21% 0.006 285.885); 
+  --color-text-dark: oklch(92.8% 0.006 264.531);
+  --color-placeholder-dark: oklch(98.5% 0.002 247.839);
+  --color-primary-dark: oklch(63.7% 0.237 25.331);
+  --color-secondary-dark: oklch(79.2% 0.209 151.711);
+  --color-section-dark: oklch(37% 0.013 285.805);
 }
